--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
-    "test": "ng test"
+    "test": "ng test",
+      "server": "tsc && node dist/server.js",
+      "heroku-postbuild": "ng build --prod && tsc"
   },
+  "main": "server.ts",
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
