--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
     "test": "ng test",
       "server": "tsc && node dist/server.js",
-      "heroku-postbuild": "ng build --prod && tsc"
+      "heroku-postbuild": "ng build && tsc"
   },
   "main": "server.ts",
   "private": true,
