--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "name": "ecrf-analyzer",
   "version": "19.0.0",
   "scripts": {
-    "ng": "ng",
     "start:server": "node server.ts",
     "start:client": "ng serve --proxy-config proxy.conf.json",
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
-    "test": "ng test",
-      "server": "tsc && node dist/server.js",
-      "heroku-postbuild": "ng build && tsc"
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "main": "server.ts",
   "private": true,
