--- a/angular.json
+++ b/angular.json
@@ -17,24 +17,29 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist/ecrf-analyzer",
-                        "index": "src/index.html",
-                        "browser": "src/main.ts",
-                        "polyfills": [
-                            "zone.js"
-                        ],
-                        "tsConfig": "tsconfig.app.json",
-                        "inlineStyleLanguage": "scss",
-                        "assets": [
-                            {
-                                "glob": "**/*",
-                                "input": "public"
-                            }
-                        ],
-                        "styles": [
-                            "src/styles.scss"
-                        ],
-                        "scripts": []
+                      "outputPath": "dist/ecrf-analyzer",
+                      "index": "src/index.html",
+                      "browser": "src/main.ts",
+                      "polyfills": [
+                        "zone.js"
+                      ],
+                      "tsConfig": "tsconfig.app.json",
+                      "inlineStyleLanguage": "scss",
+                      "assets": [
+                        {
+                          "glob": "**/*",
+                          "input": "public"
+                        }
+                      ],
+                      "styles": [
+                        "src/styles.scss"
+                      ],
+                      "scripts": [],
+                      "server": "src/main.server.ts",
+                      "outputMode": "server",
+                      "ssr": {
+                        "entry": "src/server.ts"
+                      }
                     },
                     "configurations": {
                         "production": {
