--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "scripts": {
     "start:server": "node server.ts",
     "start:client": "ng serve --proxy-config proxy.conf.json",
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\""
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
+    "serve:ssr": "node dist/ecrf-analyzer/server/server.mjs"
   },
   "main": "server.ts",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
+    "@angular/animations": "^19.1.6",
+    "@angular/common": "^19.1.6",
+    "@angular/compiler": "^19.1.6",
+    "@angular/core": "^19.1.6",
+    "@angular/forms": "^19.1.6",
+    "@angular/platform-browser": "^19.1.6",
+    "@angular/platform-browser-dynamic": "^19.1.6",
+    "@angular/platform-server": "^19.1.6",
+    "@angular/router": "^19.1.6",
+    "@angular/ssr": "^19.1.7",
     "@ngrx/signals": "^19.0.1",
     "@primeng/themes": "^19.0.5",
     "axios": "^1.7.9",
     "chart.js": "4.4.2",
+    "express": "^4.18.2",
     "primeclt": "^0.1.5",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
@@ -32,10 +36,12 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.0",
+    "@angular-devkit/build-angular": "^19.1.7",
+    "@angular/cli": "^19.1.7",
+    "@angular/compiler-cli": "^19.1.6",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.2",
