--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start:server": "node server.ts",
     "start:client": "ng serve --proxy-config proxy.conf.json",
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start-dev": "concurrently \"npm run start:server\" \"npm run start:client\"",
+      "start": "npm run serve:ssr",
       "heroku-start": "npm run serve:ssr",
     "serve:ssr": "node dist/ecrf-analyzer/server/server.mjs"
   },
